--- a/web/package.json
+++ b/web/package.json
@@ -15,8 +15,10 @@
     "@mui/material": "^5.15.18",
     "jotai": "^2.8.0",
     "next": "14.2.3",
+    "plotly.js": "^2.33.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
