--- a/web/package.json
+++ b/web/package.json
@@ -14,10 +14,11 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "jotai": "^2.8.0",
-    "next": "14.2.3",
+    "mathjs": "^13.0.0",
+    "next": "^14.2.4",
     "plotly.js": "^2.33.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
